--- a/.github/workflows/coba.yml
+++ b/.github/workflows/coba.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ 2106101Reza }}
-          password: ${{ dckr_pat_wCsF81gYpdZu0HnRtuVsUpgdVw4 }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
         
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
