--- a/.github/workflows/coba.yml
+++ b/.github/workflows/coba.yml
@@ -1,5 +1,5 @@
 name: tugas_dapl_reza
-run-name: ${{ github.actor }} Belajar GitHub Action Dapl
+run-name: ${{ github.actor }} Belajar GitHub Action
 on: [push]
 jobs:
   unit-test:
